force-app/main/default/objects/Verification_Response__c/Verification_Response__c.object-meta.xml
<CustomObject>
    <label>Verification Response</label>
    <nameField>
        <displayFormat>VER-{0000}</displayFormat>
        <label>Verification Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Verification Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>