force-app/main/default/objects/Verification_Response__c/fields/Communication_Skills_Rating__c.field-meta.xml
<CustomField>
    <fullName>Communication_Skills_Rating__c</fullName>
    <label>Communication Skills Rating</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>