force-app/main/default/objects/Verification_Response__c/fields/Is_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Is_Eligible__c</fullName>
    <label>Is Eligible</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Partially</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>