force-app/main/default/objects/Verification_Response__c/fields/Is_Trustable__c.field-meta.xml
<CustomField>
    <fullName>Is_Trustable__c</fullName>
    <label>Is Trustable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Uncertain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>