force-app/main/default/objects/Verification_Response__c/fields/Referee_IP_Address__c.field-meta.xml
<CustomField>
    <fullName>Referee_IP_Address__c</fullName>
    <label>Referee IP Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>