force-app/main/default/objects/Verification_Response__c/fields/Reference_Person__c.field-meta.xml
<CustomField>
    <fullName>Reference_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reference Person</label>
    <referenceTo>Reference_Person__c</referenceTo>
    <relationshipLabel>Verification Responses</relationshipLabel>
    <relationshipName>Verification_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>