force-app/main/default/objects/Verification_Response__c/fields/Technical_Skills_Rating__c.field-meta.xml
<CustomField>
    <fullName>Technical_Skills_Rating__c</fullName>
    <label>Technical Skills Rating</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>