force-app/main/default/objects/Verification_Response__c/fields/Work_Ethic_Rating__c.field-meta.xml
<CustomField>
    <fullName>Work_Ethic_Rating__c</fullName>
    <label>Work Ethic Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>