force-app/main/default/objects/Verification_Response__c/fields/Would_Recommend__c.field-meta.xml
<CustomField>
    <fullName>Would_Recommend__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Would Recommend</label>
    <type>Checkbox</type>
</CustomField>